--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="todo-app-main/images/bg-desktop-light.jpg" alt="" class="light">
       </div>
       <div class="title">
-        <h2>todo</h2>
+        <h2>todo app</h2>
         <div class="icon">
           <img src="todo-app-main/images/icon-moon.svg" class="moon active-icon">
           <img src="todo-app-main/images/icon-sun.svg" class="sun">
