--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="add">
         <div class="submit"><i class="fa-solid fa-check"></i></div>
-        <input type="text" pattern="[a-zA-Z0-9,#.-]+" required placeholder="Create a new todo...">
+        <input type="text" pattern="[a-zA-Z0-9,#.-]+" required placeholder="Create a new todo... nice..">
         <div class="submitting"><i class="fa-solid fa-paper-plane"></i></div>
       </div>
     </div>
